--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
   "name": "Scoreboard 14-1",
-  "short_name": "OfflineApp",
+  "short_name": "Scorekeeper 14-1",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "images/icon-192.png",
+      "src": "img/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icon-512.png",
+      "src": "img/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
