--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
   "name": "Scoreboard 14-1",
-  "short_name": "14-1",
+  "short_name": "Scorekeeper",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
+  "display": "fullscreen",
+  "orientation": "landscape"
+
   "icons": [
     {
       "src": "img/icon-192.png",
@@ -17,5 +20,3 @@
     }
   ]
 }
-
-
